; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/usb/serial/extr_ti_usb_3410_5052.c_ti_buf_put.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/usb/serial/extr_ti_usb_3410_5052.c_ti_buf_put.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.circ_buf = type { i32, i64, i32 }

@TI_WRITE_BUF_SIZE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.circ_buf*, i8*, i32)* @ti_buf_put to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ti_buf_put(%struct.circ_buf* %0, i8* %1, i32 %2) #0 {
  %4 = alloca %struct.circ_buf*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  store %struct.circ_buf* %0, %struct.circ_buf** %4, align 8
  store i8* %1, i8** %5, align 8
  store i32 %2, i32* %6, align 4
  store i32 0, i32* %8, align 4
  br label %9

9:                                                ; preds = %3, %27
  %10 = load %struct.circ_buf*, %struct.circ_buf** %4, align 8
  %11 = getelementptr inbounds %struct.circ_buf, %struct.circ_buf* %10, i32 0, i32 0
  %12 = load i32, i32* %11, align 8
  %13 = load %struct.circ_buf*, %struct.circ_buf** %4, align 8
  %14 = getelementptr inbounds %struct.circ_buf, %struct.circ_buf* %13, i32 0, i32 2
  %15 = load i32, i32* %14, align 8
  %16 = load i32, i32* @TI_WRITE_BUF_SIZE, align 4
  %17 = call i32 @CIRC_SPACE_TO_END(i32 %12, i32 %15, i32 %16)
  store i32 %17, i32* %7, align 4
  %18 = load i32, i32* %6, align 4
  %19 = load i32, i32* %7, align 4
  %20 = icmp slt i32 %18, %19
  br i1 %20, label %21, label %23

21:                                               ; preds = %9
  %22 = load i32, i32* %6, align 4
  store i32 %22, i32* %7, align 4
  br label %23

23:                                               ; preds = %21, %9
  %24 = load i32, i32* %7, align 4
  %25 = icmp sle i32 %24, 0
  br i1 %25, label %26, label %27

26:                                               ; preds = %23
  br label %59

27:                                               ; preds = %23
  %28 = load %struct.circ_buf*, %struct.circ_buf** %4, align 8
  %29 = getelementptr inbounds %struct.circ_buf, %struct.circ_buf* %28, i32 0, i32 1
  %30 = load i64, i64* %29, align 8
  %31 = load %struct.circ_buf*, %struct.circ_buf** %4, align 8
  %32 = getelementptr inbounds %struct.circ_buf, %struct.circ_buf* %31, i32 0, i32 0
  %33 = load i32, i32* %32, align 8
  %34 = sext i32 %33 to i64
  %35 = add nsw i64 %30, %34
  %36 = load i8*, i8** %5, align 8
  %37 = load i32, i32* %7, align 4
  %38 = call i32 @memcpy(i64 %35, i8* %36, i32 %37)
  %39 = load %struct.circ_buf*, %struct.circ_buf** %4, align 8
  %40 = getelementptr inbounds %struct.circ_buf, %struct.circ_buf* %39, i32 0, i32 0
  %41 = load i32, i32* %40, align 8
  %42 = load i32, i32* %7, align 4
  %43 = add nsw i32 %41, %42
  %44 = load i32, i32* @TI_WRITE_BUF_SIZE, align 4
  %45 = sub nsw i32 %44, 1
  %46 = and i32 %43, %45
  %47 = load %struct.circ_buf*, %struct.circ_buf** %4, align 8
  %48 = getelementptr inbounds %struct.circ_buf, %struct.circ_buf* %47, i32 0, i32 0
  store i32 %46, i32* %48, align 8
  %49 = load i32, i32* %7, align 4
  %50 = load i8*, i8** %5, align 8
  %51 = sext i32 %49 to i64
  %52 = getelementptr inbounds i8, i8* %50, i64 %51
  store i8* %52, i8** %5, align 8
  %53 = load i32, i32* %7, align 4
  %54 = load i32, i32* %6, align 4
  %55 = sub nsw i32 %54, %53
  store i32 %55, i32* %6, align 4
  %56 = load i32, i32* %7, align 4
  %57 = load i32, i32* %8, align 4
  %58 = add nsw i32 %57, %56
  store i32 %58, i32* %8, align 4
  br label %9

59:                                               ; preds = %26
  %60 = load i32, i32* %8, align 4
  ret i32 %60
}

declare dso_local i32 @CIRC_SPACE_TO_END(i32, i32, i32) #1

declare dso_local i32 @memcpy(i64, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
